# something_red

./: .gitmodules  README.md
controller/: index.html
converter/: main.py  output.c  pop.c
matrix/: CMakeLists.txt  README.md  sdkconfig
matrix-controller/: .gitignore  app.json  package-lock.json  package.json  python_controller.py  python_controller_README.md  python_controller_gui.py
matrix-controller/app/(tabs)/: index.tsx
matrix-controller/types/: react-native-usb-serialport-for-android.d.ts
matrix-flag/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
matrix-flag/main/: CMakeLists.txt  color_palette.c  color_palette.h  front_matrix_control.h  led_matrix_control.c  led_matrix_control.h  light_controller.c  light_controller.h  light_mode_blink_red.h  light_mode_fire.h  light_mode_init.c  light_mode_init.h  light_mode_off.c  light_mode_off.h  light_mode_pachinko.c  light_mode_party.h  light_mode_pop.h  light_mode_rainbow_scroll.h  light_mode_value.c  main.c  matrix_utils.c  matrix_utils.h
matrix-flag/main/light_modes/: light_mode_blue_fire.c  light_mode_blue_fire.h  light_mode_blue_flush.c  light_mode_blue_flush.h  light_mode_init.c  light_mode_off.c
matrix/main/: CMakeLists.txt  back_matrix_control.c  back_matrix_control.h  color_palette.c  color_palette.h  front_matrix_control.c  front_matrix_control.h  light_controller.c  light_controller.h  light_mode_blink_red.c  light_mode_fire.c  light_mode_fire.h  light_mode_off.c  light_mode_pachinko.c  light_mode_pachinko.h  light_mode_party.c  light_mode_pop.c  light_mode_rainbow_scroll.c  light_mode_value.c  light_mode_value.h  main.c  matrix_utils.c  matrix_utils.h
